--- a/Files/lang/phrases/1 word phrase.csv
+++ b/Files/lang/phrases/1 word phrase.csv
@@ -1,17 +1,17 @@
-,this,ß@;
-,it's,ß@ÊÇ;
-,deaf,Ã@µÄ;
-,earn,«@µÃ;
-,gain,«@µÃ;
-,here,ß@ÑY;
-,show,ï@Ê¾;
-,can't,²»ÄÜ;
-,haunt,¿MÀ@;
-,these,ß@Ğ©;
-,basket,»@×Ó;
-,obtain,«@µÃ;
-,orchard,¹ûˆ@;
-,idyllic,Ìïˆ@ÔŠµÄ;
-,amazing,ÁîÈËó@®µÄ;
-,rewind,ÖØÀ@;
-,heed,×¢Òâ;
+,this,é€™;
+,it's,é€™æ˜¯;
+,deaf,è¾çš„;
+,earn,ç²å¾—;
+,gain,ç²å¾—;
+,here,é€™è£;
+,show,é¡¯ç¤º;
+,can't,ä¸èƒ½;
+,haunt,ç¸ˆç¹;
+,these,é€™äº›;
+,basket,ç±ƒå­;
+,obtain,ç²å¾—;
+,orchard,æœåœ’;
+,idyllic,ç”°åœ’è©©çš„;
+,amazing,ä»¤äººé©šç•°çš„;
+,rewind,é‡ç¹;
+,heed,æ³¨æ„;
