--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -1,109 +1,109 @@
-,about,to,¼´Œ¢;
-,as,well,Ò²;
-,stand,for,´ú±í;
-,this,is,ß@ÊÇ;
-,account,for,´Ù³É;
-,apt,to,ÇãÏòÓÚ;
-,aim,at,Õë¶Ô;
-,a,lot,Ğí¶à;
-,au,contraire,·´Ö®;
-,based,on,»ùÓÚ;
-,balk,at,»Ø±Ü;
-,bump,into,Åöµ½;
-,certainly,will,ÊÆ±Ø;
-,close,to,½Ó½ü;
-,cope,with,Ó¦¸¶;
-,come,from,À´×Ô;
-,contribute,to,Œ§ÖÂ;
-,cheer,up,Õñ×÷ÆğÀ´;
-,come,in,½øÀ´;
-,do,with,ÌÀí;
-,don't,you,Äã²»;
-,doesn't,he,Ëû²»;
-,doesn't,she,Ëı²»;
-,depend,on,È¡¾öÓÚ;
-,derive,from,Ô´ÓÚ;
-,devote,to,·îÏ×;
-,fend,off,µ²¿ª;
-,fill,out,ÌîĞ´;
-,focus,on,¹Ø×¢ÓÚ;
-,free,of,ÃâÓÚ;
-,focus,on,¾Û½¹ÓÚ;
-,fond,of,Ï²»¶;
-,find,out,ÕÒ³ö;
-,fill,in,ÌîÈë;
-,fill,out,ÌîÈë;
-,fix,up,ĞŞÀí;
-,for,sure,ÎãÓ¹ÖÃÒÉ;
-,for,instance,ÀıÈç;
-,get,up,Æğ´²;
-,go,over,»Ø¹Ë;
-,good,at,ÉÃ³¤;
-,guess,what,²Â²Â¿´;
-,give,up,·ÅÆú;
-,give,in,Í¶½µ;
-,going,to,½«Òª;
-,have,to,±Øíš;
-,has,to,±Øíš;
-,had,to,±Øíš;
-,have,had,ÒÑ¾­;
-,have,got,ÓĞ;
-,how,much,¶àÉÙ;
-,how,many,¶àÉÙ;
-,how,often,¶à¾ÃÒ»´Î;
-,hang,out,ÏĞ¹ä;
-,hang,out,Íâ³ö¾Û²Í;
-,in,case,ÈfÒ»;
-,in,danger,´¦¾³Î£ÏÕ;
-,i,mean,ÎÒµÄÒâË¼ÊÇ;
-,ice,cream,±ùä¿ÁÜ;
-,kind,of,·N;
-,laugh,at,³°Ğ¦;
-,lead,to,Ö¸Ïò;
-,lucky,dog,ĞÒÔË¶ù;
-,look,at,¿´;
-,mean,to,ÒâÔÚ;
-,my,ass,²Å¹Ö;
-,next,to,°¤Öø;
-,of,course,®”È»;
-,out,of,³öÓÚ;
-,on,earth,¾¿¾¹;
-,pick,up,¼ñÆğ;
-,point,out,Ö¸³ö;
-,point,to,Ö¸Ïò;
-,result,in,µ¼ÖÂ;
-,rule,out,ÅÅ³ı;
-,rush,in,³å½ø;
-,rush,off,´Ò´ÒÀë¿ª;
-,realize,that,ÒâÊ¶µ½;
-,result,in,µ¼ÖÂ;
-,result,from,ÆğÒòì¶;
-,result,from,ÓÉÓÚ;
-,shooting,star,Á÷ĞÇ;
-,sign,in,ºµ½;
-,stay,up,°¾Ò¹;
-,so,what,ÄÇÓÖÈçºÎ;
-,stick,to,¼á³Ö;
-,set,off,Æğ·É;
-,such,as,±ÈÈç;
-,screw,up,¸ãÔÒ;
-,tune,out,¹Øµô;
-,take,off,Æğ·É;
-,turn,to,ÇãÏò;
-,take,in,ÆÛÆ­;
-,take,over,½Ó¹Ü;
-,take,care,ÕÕ¹Ë;
-,take,notes,¼Ç±Ê¼Ç;
-,the,more,Ô½¶à;
-,think,about,Ë¼¿¼;
-,to,be,È¥×÷;
-,trans,people,×ƒĞÔÈË;
-,used,to,ß^È¥½›³£;
-,wait,for,µÈ´ı;
-,wallow,in,³ÁäÏì¶;
-,wipe,out,³¹µ×´İ»Ù;
-,you,bet,µ±È»;
-,add,up,ºÏ¼Æ;
-,conform,with,·ûºÏ;
-,conform,to,·ûºÏ;
-,look,for,Œ¤ÕÒ;
+,about,to,å³å°‡;
+,as,well,ä¹Ÿ;
+,stand,for,ä»£è¡¨;
+,this,is,é€™æ˜¯;
+,account,for,ä¿ƒæˆ;
+,apt,to,å€¾å‘äº;
+,aim,at,é’ˆå¯¹;
+,a,lot,è®¸å¤š;
+,au,contraire,åä¹‹;
+,based,on,åŸºäº;
+,balk,at,å›é¿;
+,bump,into,ç¢°åˆ°;
+,certainly,will,åŠ¿å¿…;
+,close,to,æ¥è¿‘;
+,cope,with,åº”ä»˜;
+,come,from,æ¥è‡ª;
+,contribute,to,å°è‡´;
+,cheer,up,æŒ¯ä½œèµ·æ¥;
+,come,in,è¿›æ¥;
+,do,with,è™•ç†;
+,don't,you,ä½ ä¸;
+,doesn't,he,ä»–ä¸;
+,doesn't,she,å¥¹ä¸;
+,depend,on,å–å†³äº;
+,derive,from,æºäº;
+,devote,to,å¥‰çŒ®;
+,fend,off,æŒ¡å¼€;
+,fill,out,å¡«å†™;
+,focus,on,å…³æ³¨äº;
+,free,of,å…äº;
+,focus,on,èšç„¦äº;
+,fond,of,å–œæ¬¢;
+,find,out,æ‰¾å‡º;
+,fill,in,å¡«å…¥;
+,fill,out,å¡«å…¥;
+,fix,up,ä¿®ç†;
+,for,sure,æ¯‹åº¸ç½®ç–‘;
+,for,instance,ä¾‹å¦‚;
+,get,up,èµ·åºŠ;
+,go,over,å›é¡¾;
+,good,at,æ“…é•¿;
+,guess,what,çŒœçŒœçœ‹;
+,give,up,æ”¾å¼ƒ;
+,give,in,æŠ•é™;
+,going,to,å°†è¦;
+,have,to,å¿…é ˆ;
+,has,to,å¿…é ˆ;
+,had,to,å¿…é ˆ;
+,have,had,å·²ç»;
+,have,got,æœ‰;
+,how,much,å¤šå°‘;
+,how,many,å¤šå°‘;
+,how,often,å¤šä¹…ä¸€æ¬¡;
+,hang,out,é—²é€›;
+,hang,out,å¤–å‡ºèšé¤;
+,in,case,è¬ä¸€;
+,in,danger,å¤„å¢ƒå±é™©;
+,i,mean,æˆ‘çš„æ„æ€æ˜¯;
+,ice,cream,å†°æ·‡æ·‹;
+,kind,of,ç¨®;
+,laugh,at,å˜²ç¬‘;
+,lead,to,æŒ‡å‘;
+,lucky,dog,å¹¸è¿å„¿;
+,look,at,çœ‹;
+,mean,to,æ„åœ¨;
+,my,ass,æ‰æ€ª;
+,next,to,æŒ¨è‘—;
+,of,course,ç•¶ç„¶;
+,out,of,å‡ºäº;
+,on,earth,ç©¶ç«Ÿ;
+,pick,up,æ¡èµ·;
+,point,out,æŒ‡å‡º;
+,point,to,æŒ‡å‘;
+,result,in,å¯¼è‡´;
+,rule,out,æ’é™¤;
+,rush,in,å†²è¿›;
+,rush,off,åŒ†åŒ†ç¦»å¼€;
+,realize,that,æ„è¯†åˆ°;
+,result,in,å¯¼è‡´;
+,result,from,èµ·å› æ–¼;
+,result,from,ç”±äº;
+,shooting,star,æµæ˜Ÿ;
+,sign,in,ç°½åˆ°;
+,stay,up,ç†¬å¤œ;
+,so,what,é‚£åˆå¦‚ä½•;
+,stick,to,åšæŒ;
+,set,off,èµ·é£;
+,such,as,æ¯”å¦‚;
+,screw,up,æç ¸;
+,tune,out,å…³æ‰;
+,take,off,èµ·é£;
+,turn,to,å€¾å‘;
+,take,in,æ¬ºéª—;
+,take,over,æ¥ç®¡;
+,take,care,ç…§é¡¾;
+,take,notes,è®°ç¬”è®°;
+,the,more,è¶Šå¤š;
+,think,about,æ€è€ƒ;
+,to,be,å»ä½œ;
+,trans,people,è®Šæ€§äºº;
+,used,to,éå»ç¶“å¸¸;
+,wait,for,ç­‰å¾…;
+,wallow,in,æ²‰æ¹æ–¼;
+,wipe,out,å½»åº•æ‘§æ¯;
+,you,bet,å½“ç„¶;
+,add,up,åˆè®¡;
+,conform,with,ç¬¦åˆ;
+,conform,to,ç¬¦åˆ;
+,look,for,å°‹æ‰¾;
