--- a/Files/lang/phrases/3 word phrase.csv
+++ b/Files/lang/phrases/3 word phrase.csv
@@ -1,20 +1,20 @@
-,as,well,as,²¢ÇÒ;
-,are,you,kidding,ÄãÔÚ¿ªÍæĞ¦Âğ;
-,a,long,time,ºÜ³¤Ò»¶ÎÊ±¼ä;
-,a,lot,of,Ğí¶àµÄ;
-,for,sake,of, ‘ÁË;
-,get,rid,of,°ÚÍÑ;
-,in,love,with,°®ÉÏ;
-,in,charge,of,¹ÜÀí;
-,in,order,to, ‘ÁË;
-,in,term,of,°´ÕÕ;
-,in,terms,of,°´ÕÕ;
-,in,your,opinion,ÒÀÄãËùÒŠ;
-,point,of,view,Ó^üc;
-,pros,and,cons,ÀûÓë±×;
-,take,care,of,ÕÕ¹Ë;
-,watch,out,for,ÁôÒâ;
-,when,pigs,fly,ÊÇ²»¿ÉÄÜµÄ;
-,see,about,that,×ß×ÅÇÆ;
-,hook,up,with,ÁªÏµ;
-,add,up,to,ºÏ¼Æ´ï;
+,as,well,as,å¹¶ä¸”;
+,are,you,kidding,ä½ åœ¨å¼€ç©ç¬‘å—;
+,a,long,time,å¾ˆé•¿ä¸€æ®µæ—¶é—´;
+,a,lot,of,è®¸å¤šçš„;
+,for,sake,of,çˆ²äº†;
+,get,rid,of,æ‘†è„±;
+,in,love,with,çˆ±ä¸Š;
+,in,charge,of,ç®¡ç†;
+,in,order,to,çˆ²äº†;
+,in,term,of,æŒ‰ç…§;
+,in,terms,of,æŒ‰ç…§;
+,in,your,opinion,ä¾ä½ æ‰€è¦‹;
+,point,of,view,è§€é»;
+,pros,and,cons,åˆ©ä¸å¼Š;
+,take,care,of,ç…§é¡¾;
+,watch,out,for,ç•™æ„;
+,when,pigs,fly,æ˜¯ä¸å¯èƒ½çš„;
+,see,about,that,èµ°ç€ç§;
+,hook,up,with,è”ç³»;
+,add,up,to,åˆè®¡è¾¾;
