update word sort engine

--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -393,7 +393,7 @@ hand ,/n./@手;
 hang ,/v./@懸掛;
 hard ,/adj./@堅硬的;,/adj./@困難的;
 hare ,/n./@野兔;
-harm ,/v./@傷害;
+harm ,/v./@傷害;,/n./@傷害;,/n./@損害;,/vt./@危害;,/vt./@损害;
 hash ,/n./@混雜;
 hate ,/v./@恨;,/v./@厭;
 haul ,/v./@拖拉;
