--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1021,7 +1021,7 @@ resort ,/v./@求助;
 result ,/n./@結果;,/n./@後果;,/n./@效果;
 resume ,/v./@繼續;,/n./@摘要;
 retail ,/v./@零售;
-retain ,/v./@保持;
+retain ,/v./@保持;,/vt./@保留;
 retard ,/v./@延遲;,/v./@減緩;
 retina ,/n./@視網膜;
 retire ,/v./@退休;
