--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -418,7 +418,7 @@ energy ,/n./@能量;
 engage ,/v./@使從事;,/v./@吸引;,/v./@佔用;
 engine ,/n./@引擎;,/n./@发動機;
 enigma ,/n./@謎;,/n./@不可思議的事物;
-enough ,/adj./@足夠的;,/adj./@充足的;
+enough ,/adj./@足夠的;,/adj./@充足的;,/adv./@足够地;,/adv./@相当;,/adv./@很;,/pron./@足够;,/pron./@太多;,/adj./@太多的;
 enrage ,/v./@激怒;
 enrich ,/v./@充實;
 enroll ,/v./@登記;
