--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -179,6 +179,7 @@ component ,/n./@成分;,/n./@组件;,/adj./@组成的;
 composure ,/n./@鎮定;,/n./@沉著;,/n./@鎮定;
 concourse ,/n./@廣場;,/n./@集合;,/n./@合流;,/n./@群眾;
 condition ,/n./@条件;,/n./@情况;
+conductor ,/n./@导体;,/n./@指挥;,/n./@售票员;,/n./@列车长;,/n./@向导;
 confident ,/adj./@自信的;
 congenial ,/adj./@意氣相投的;,/adj./@一致的;,/adj./@性格相似的;
 congruous ,/adj./@一致的;,/adj./@協調的;,/adj./@適合的;
