--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -645,6 +645,7 @@ nautical ,/adj./@航海的;
 navigate ,/v./@航行;,/v./@航空;
 necklace ,/n./@项链;
 negative ,/adj./@否定的;
+neighbor ,/n./@邻居;
 nepotism ,/n./@裙帶關係;
 newlywed ,/n./@新婚夫妇;
 nickname ,/n./@绰号;
