--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -66,7 +66,7 @@ dad ,/n./@父親;
 dam ,/n./@水壩;
 day ,/n./@天;,/n./@日;,/n./@白天;
 den ,/n./@穴;,/n./@窩;,/n./@巢;,/n./@小房間;,/n./@密室;
-did ,/vt./<do的過去式>@做;
+did ,/vt./<do的過去式>@做;,/aux./@做;
 die ,/v./@死;
 dig ,/v./@挖;
 dim ,/n./@朦朧;,/n./@昏暗;
@@ -105,7 +105,7 @@ flu ,/n./@流感;
 fly ,/v./@飛;,/n./@蒼蠅;
 foe ,/n./@敵人;,/n./@反對者;
 fog ,/n./@霧;
-for ,/conj./@爲;,/conj./@爲了;,/conj./@因爲;,/conj./@對于;
+for ,/conj./@爲;,/conj./@爲了;,/conj./@因爲;,/conj./@對于;,/prep./@为;
 fox ,/n./@狐狸;
 fry ,/v./@炸;,/v./@煎;
 fun ,/n./@樂趣;,/n./@玩笑;
