--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -109,7 +109,7 @@ for ,/conj./@爲;,/conj./@爲了;,/conj./@因爲;,/conj./@對于;,/prep./@为;
 fox ,/n./@狐狸;
 fry ,/v./@炸;,/v./@煎;
 fun ,/n./@樂趣;,/n./@玩笑;
-fur ,/n./@皮;
+fur ,/n./@软毛;,/n./@毛皮;,/n./@水垢;,/n./@舌苔;,/vi./@生水垢;,/vi./@积沉淀;,/vi./@生舌苔;
 gab ,/v./@閑聊;,/v./@唠叨;,/v./@空談;
 gag ,/v./@塞住;
 gap ,/n./@間隙;
