--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -557,7 +557,7 @@ main ,/adj./@主要的;
 make ,/v./@制作;
 male ,/adj./@公的;,/adj./@雄性的;
 mall ,/n./@商場;
-many ,/adj./@許多;
+many ,/adj./@许多的;,/adj./@很多;,/pron./@许多;,/n./@群众;,/n./@很多人;,/adv./@更加;
 mark ,/n./@標志;
 mart ,/n./@集市;,/n./@商業中心;
 mask ,/n./@面具;,/v./@掩飾;
@@ -667,7 +667,7 @@ pace ,/vi./@踱步;
 pack ,/n./@包裹;
 page ,/n./@頁;
 paid ,/v./@支付;
-pain ,/v./@疼痛;
+pain ,/v./@疼痛;,/n./@痛苦;
 pair ,/v./@配;,/n./@一對;
 pale ,/adj./@蒼白的;
 palm ,/n./@手掌;,/n./@棕櫚樹;
