--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -671,6 +671,7 @@ lucency ,/n./@透明;,/n./@光亮;
 lumiere ,/n./@盧米埃爾;
 lunatic ,/adj./@瘋狂的;
 machine ,/n./@機械;
+madness ,/n./@疯狂;,/n./@愚蠢;,/n./@精神失常;,/n./@瘋狂的行為;,/n./@瘋狂之舉;
 magenta ,/adj./@洋紅;,/n./@洋紅色;
 magical ,/adj./@魔術的;,/adj./@魔法般的;
 magnate ,/n./@巨頭;,/n./@要人;,/n./@富豪;,/n./@大資本家;
