--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -911,6 +911,7 @@ qualify ,/v./@限制;,/v./@合格;,/v./@授權;
 quality ,/n./@質量;
 quantum ,/n./@量子;
 quicken ,/v./@加快;
+quickly ,/adv./@快速地;,/adv./@快;
 radiant ,/adj./@發光的;
 radiate ,/v./@輻射;,/v./@放射;,/v./@發光;
 radical ,/adj./@激進的;,/adj./@根本的;
@@ -1190,8 +1191,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
