--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -911,6 +911,7 @@ qualify
 quality
 quantum
 quicken
+quickly
 radiant
 radiate
 radical
@@ -1190,8 +1191,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
