--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -24,6 +24,7 @@
 ,depend,on,取决于;
 ,derive,from,源于;
 ,devote,to,奉献;
+,et,cetera,等等;
 ,fend,off,挡开;
 ,fill,out,填写;
 ,focus,on,关注于;
@@ -99,6 +100,7 @@
 ,to,be,去作;
 ,trans,people,變性人;
 ,used,to,過去經常;
+,vice,versa,反之亦然;
 ,wait,for,等待;
 ,wallow,in,沉湎於;
 ,wipe,out,彻底摧毁;
@@ -107,3 +109,5 @@
 ,conform,with,符合;
 ,conform,to,符合;
 ,look,for,尋找;
+,figure,out,想出;
+,pass,on,去世,接着进行,传递;
