--- a/Files/lang/phrases/4 word phrase.csv
+++ b/Files/lang/phrases/4 word phrase.csv
@@ -1,6 +1,6 @@
-,fall,in,love,with,°®ÉÏ;
-,for,the,purpose,of,ÎªÁË;
-,for,the,sake,of,ÎªÁË;
-,how,do,you,do,ÄãºÃ;
-,it,is,said,that,¾İËµ;
-,it,is,reported,that,¾İ±¨µÀ;
+,fall,in,love,with,çˆ±ä¸Š;
+,for,the,purpose,of,ä¸ºäº†;
+,for,the,sake,of,ä¸ºäº†;
+,how,do,you,do,ä½ å¥½;
+,it,is,said,that,æ®è¯´;
+,it,is,reported,that,æ®æŠ¥é“;
