update add word script

--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -231,6 +231,7 @@ electronic ,/adj./@电子的;
 elementary ,/adj./@基礎的;,/adj./@初步的;
 embassador ,/n./@大使;,/n./@使節;
 embroidery ,/n./@刺綉;,/n./@刺綉品;,/n./@刺綉術;
+emigration ,/n./@移居外国;,/n./@移民國外;
 employment ,/n./@雇用;
 enchanting ,/adj./@吸引人的;
 engagement ,/n./@订婚;
