--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -550,7 +550,7 @@ jealousy ,/n./@妒忌;
 jeopardy ,/n./@危險;
 jetliner ,/n./@噴氣客機;
 judicial ,/adj./@司法的;
-juvenile ,/adj./@青少年的;
+juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
 laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;
