--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -135,6 +135,7 @@ blondie
 blossom
 blunder
 bolster
+bombard
 bonfire
 bonjour
 booklet
@@ -196,8 +197,8 @@ charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -1191,8 +1192,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
