--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -135,6 +135,7 @@ blondie ,/n./@金髮碧眼的人;
 blossom ,/v./@綻放;
 blunder ,/n./@大錯;
 bolster ,/n./@支持;,/n./@長枕;,/vt./@支持;,/vt./@支撐;
+bombard ,/vt./@轰炸;,/vt./@轰击;
 bonfire ,/n./@篝火;,/n./@營火;
 bonjour ,/n./@你好;
 booklet ,/n./@小冊子;
@@ -196,8 +197,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -1191,8 +1192,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
