--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1088,7 +1088,7 @@ sweet ,/adj./@甜的;
 swell ,/v./@增強;,/v./@擴大;,/v./@腫脹;
 swift ,/n./@快速的;
 swine ,/n./@豬;
-swipe ,/v./@猛擊;
+swipe ,/v./@猛擊;,/vi./@挥击;
 swirl ,/n./@漩渦;,/v./@打旋;
 swish ,/v./@鞭打;
 Swiss ,/adj./@瑞士的;
