--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1300,8 +1300,10 @@ tremor ,/n./@震動;
 trendy ,/adj./@時髦的;
 treson ,/n./@叛國罪;,/n./@背叛;
 triage ,/n./@分類;,/v./@分類;,/v./@應急分配;
+tribal ,/adj./@部落的;
 trifle ,/n./@瑣事;
 triple ,/adj.//pref./@三的;
+trivet ,/n./@三脚铁架;,/n./@三脚台架;
 trivia ,/n./@瑣事;
 tumble ,/v./@跌倒;,/v./@摔跤;,/v./@打滾;
 tumult ,/n./@混乱;,/n./@骚乱;,/n./@喧闹;,/n./@喧哗;,/#syn/@turmoil;
@@ -1372,6 +1374,7 @@ vulgar ,/adj./@粗俗的;,/n./@平民;
 waffle ,/n./@華夫;,/v./@胡扯;,/v./@閒聊;
 waiter ,/n./@侍者;,/n./@服務員;
 wallet ,/n./@錢包;
+wander ,/vi./@游荡;,/vi./@闲逛;,/vt./@游荡;,/n./@闲逛;,/vi./@漫步;,/vi./@游离;,/vi./@走神;,/vi./@离题;,/vi./@走散;,/vi./@蜿蜒;,/vi./@乱摸;
 wasn't ,/v./@不是;
 weaken ,/v./@削弱;
 weapon ,/n./@武器;
