--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -157,6 +157,7 @@ brought
 brutish
 buffalo
 buffoon
+bulimia
 burglar
 bustard
 butcher
@@ -197,8 +198,8 @@ charter
 cherish
 chicken
 chimney
-Chinese
 chinese
+Chinese
 chowder
 chronic
 chuckle
@@ -1192,8 +1193,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
