--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -157,6 +157,7 @@ brought ,/v./@帶;
 brutish ,/adj./@粗野的;,/adj./@殘忍的;
 buffalo ,/n./@水牛;,/n./@野牛;,/n./@兩栖坦克;
 buffoon ,/n./@醜角;,/n./@滑稽演員;
+bulimia ,/n./@贪食症;
 burglar ,/n./@竊賊;
 bustard ,/n./@大鴇;
 butcher ,/n./@屠夫;
@@ -197,8 +198,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-Chinese ,/n./@漢語;
 chinese ,/n./@漢語;
+Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -1192,8 +1193,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
