--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1300,8 +1300,10 @@ tremor
 trendy
 treson
 triage
+tribal
 trifle
 triple
+trivet
 trivia
 tumble
 tumult
@@ -1372,6 +1374,7 @@ vulgar
 waffle
 waiter
 wallet
+wander
 wasn't
 weaken
 weapon
