update similar search

--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -28,6 +28,7 @@ against ,/v./@反對;
 agility ,/n./@敏捷;,/n./@靈活;
 agitate ,/v./@煽動;
 agonize ,/v./@痛苦;
+aimless ,/adj./@无目的的;
 airport ,/n./@飛機場;
 airship ,/n./@氣艇;
 alchemy ,/n./@點金術;
@@ -198,8 +199,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -1193,8 +1194,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
