--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -28,6 +28,7 @@ aggravate ,/v./@加重;,/v./@惡化;
 aggregate ,/v./@集合;
 agitation ,/n./@鼓动;
 agreeable ,/adj./@惬意的;,/adj./@舒适的;,/adj./@易相处的;
+aimlessly ,/adv./@无目的地;
 albatross ,/n./@信天翁;,/n./@沉重負擔;
 alcoholic ,/adj./@酒精的;
 algorithm ,/n./@算法;
