--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -28,6 +28,7 @@ against
 agility
 agitate
 agonize
+aimless
 airport
 airship
 alchemy
@@ -198,8 +199,8 @@ charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -1193,8 +1194,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
