--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -283,6 +283,7 @@ corpora
 correct
 corrupt
 costume
+cottage
 counsel
 country
 courage
@@ -1194,8 +1195,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
