--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -283,6 +283,7 @@ corpora ,/n./@全集;,/n./@主體;
 correct ,/adj./@正確的;
 corrupt ,/v./@腐化;,/v./@使腐化;
 costume ,/n./@服裝;
+cottage ,/n./@小屋;,/n./@村舍;
 counsel ,/v./@建議;,/v./@商討;,/v./@勸告;,/n./@顧問;,/v./@商議;
 country ,/n./@國家;
 courage ,/n./@勇氣;
@@ -1194,8 +1195,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
