--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -260,6 +260,7 @@ prehistoric ,/adj./@史前的;
 preparation ,/n./@准备;
 preposition ,/n./@介词;
 prerogative ,/adj./@有特權的;
+presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
 pretentious ,/adj./@虛偽的;
 procurement ,/n./@取得;
 proficiency ,/n./@熟练;,/n./@精通;
@@ -283,8 +284,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-Renaissance ,/n./@文艺复兴;
 renaissance ,/n./@复活;,/n./@再生;
+Renaissance ,/n./@文艺复兴;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
