--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -288,6 +288,7 @@ fell ,/v./@摔倒;
 felt ,/v./@感覺;,/v./<feel的過去式>;
 fend ,/v./@謀生;,/v./@擋開;
 feud ,/n./@糾紛;,/n./@封地;,/n./@恩怨;
+fife ,/n./@横笛;
 file ,/n./@文件;,/n./@檔案;,/n./@縱列;,/n./@銼刀;
 fill ,/v./@填;
 film ,/n./@電影;,/n./@膠片;,/n./@薄膜;
@@ -301,7 +302,7 @@ fist ,/n./@拳頭;
 five ,/n./@五;
 flag ,/n./@旗;
 flap ,/v./@拍打;
-flat ,/adj./@平坦的;
+flat ,/adj./@平坦的;,/adj./@水平的;,/adj./@平展的;,/adj./@浅的;,/adj./@紧贴的;,/n./@平面;
 flaw ,/n./@缺點;,/n./@瑕疵;
 flea ,/n./@跳蚤;
 flee ,/vi./@逃跑;,/v./@逃離;
@@ -701,7 +702,7 @@ pill ,/n./@藥丸;,/n./@彈丸;
 pimp ,/v./@拉皮條;
 pine ,/n./@松樹;,/n./@松木;,/v./@哀悼;,/v./@渴望;,/v./@痛苦;
 pink ,/adj./@粉色的;
-pipe ,/n./@管子;,/n./@煙斗;
+pipe ,/n./@管子;,/n./@煙斗;,/n./@风笛;
 piss ,/v./@小便;
 pity ,/n./@遺憾;,/n.//v./@憐憫;,/n.//v./@同情;
 plan ,/n./@計劃;
