--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -315,6 +315,7 @@ deter ,/v./@制止;
 devil ,/n./@魔鬼;
 diary ,/n./@日記;
 dingy ,/adj./@骯髒的;,/adj./@昏暗的;
+dirge ,/n./@挽歌;
 dirty ,/adj./@脏的;
 disco ,/n./@迪斯科;
 ditch ,/n./@溝渠;
@@ -406,6 +407,7 @@ fault ,/n./@錯誤;,/n./@過錯;
 favor ,/n./@贊成;,/n./@喜愛;,/n./@好感;
 feast ,/n./@盛宴;
 femme ,/n./@妻子;,/n./@婦女;,/adj./@嬌柔的;
+fence ,/n./@柵欄;,/n./@圍欄;,/n./@籬笆;
 ferry ,/n./@渡口;,/n./@渡船;,/v./@渡運;
 fetch ,/v./@拿來;,/v./@取來;
 fever ,/n./@发燒;
