--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1156,6 +1156,7 @@ socket ,/n./@插座;
 soever ,/adj./@任何;
 solemn ,/adj./@莊嚴的;
 solute ,/n./@溶質;,/n./@溶解物;
+sombre ,/adj./@灰暗的;,/adj./@昏暗的;,/adj./@沮丧的;,/adj./@严峻的;,/adj./@沉重的;
 sonnet ,/n./@十四行詩;
 sooner ,/adv./@更快;
 sordid ,/adj./@骯髒的;,/adj./@卑鄙的;,/adj./@暗淡的;
@@ -1337,8 +1338,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
+utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacuum ,/n./@眞空;
 vagina ,/n./@陰道;
