--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -382,7 +382,7 @@ dissent ,/n./@異議;,/n./@不信國教;
 distant ,/adj./@遙遠的;
 distort ,/v./@扭曲;
 disturb ,/v./@打擾;
-diverge ,/n./@分歧;,/v./@离题;
+diverge ,/vi./@分歧;,/vi./@離題;,/vi./@分叉;,/vi./@偏离;,/vi./@相异;
 diverse ,/adj./@多樣的;
 divisor ,/n./@除數;
 dolphin ,/n./@海豚;
@@ -1195,8 +1195,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
