--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -37,6 +37,7 @@ alleviate ,/v./@減輕;,/v./@緩和;
 alligator ,/n./@短吻鱷;
 allocated ,/adj./@分配的;
 allowance ,/n./@津贴;
+alongside ,/prep./@在旁边;,/adv./@在旁边;
 alternate ,/v./@交替;
 amazement ,/n./@驚奇;,/n./@詫異;
 ambiguity ,/n./@歧義;,/n./@意義不明;
@@ -275,6 +276,7 @@ dissenter ,/n./@反对者;,/n./@异议者;
 dissident ,/n./@持不同政见者;
 dissipate ,/v./@耗费;,/v./@驱散;,/v./@浪费;,/v./@消耗;
 distingue ,/adj./@高尚的;
+divergent ,/adj./@有分歧的;,/adj./@不同的;
 diversion ,/n./@转移;,/n./@消遣;
 diversity ,/n./@多样化;,/n./@多元;
 dormitory ,/n./@宿舍;
