--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -260,6 +260,7 @@ prehistoric
 preparation
 preposition
 prerogative
+presumption
 pretentious
 procurement
 proficiency
@@ -283,8 +284,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-Renaissance
 renaissance
+Renaissance
 replacement
 requirement
 resemblance
