--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -315,6 +315,7 @@ deter
 devil
 diary
 dingy
+dirge
 dirty
 disco
 ditch
@@ -406,6 +407,7 @@ fault
 favor
 feast
 femme
+fence
 ferry
 fetch
 fever
