--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1156,6 +1156,7 @@ socket
 soever
 solemn
 solute
+sombre
 sonnet
 sooner
 sordid
@@ -1337,8 +1338,8 @@ urbane
 urgent
 useful
 utmost
-utopia
 Utopia
+utopia
 vacant
 vacuum
 vagina
