--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -735,6 +735,7 @@ pharmacy
 platform
 pleasant
 pleasure
+poignant
 polarity
 polaroid
 politics
@@ -925,6 +926,7 @@ subtlety
 subtract
 suburban
 succinct
+suddenly
 suitable
 suitcase
 sunshine
