--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -37,6 +37,7 @@ alleviate
 alligator
 allocated
 allowance
+alongside
 alternate
 amazement
 ambiguity
@@ -275,6 +276,7 @@ dissenter
 dissident
 dissipate
 distingue
+divergent
 diversion
 diversity
 dormitory
