--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -452,7 +452,7 @@ inc. ,/n./@股份有限公司;
 into ,/prep./@進入;
 iron ,/n./@鐵;,/n./@熨斗;,/v./@熨平;
 it's ,/n.&v./@這是;,/n.&v./@它是;
-itch ,/n./@癢;
+itch ,/n./@癢;,/vi./@发痒;,/vi./@渴望;,/n./@渴望;
 item ,/n./@項目;,/n./@條款;
 jail ,/n./@監獄;
 jeep ,/n./@吉普車;
