--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -325,6 +325,7 @@ inducement ,/n./@誘導;,/n./@動機;
 industrial ,/adj./@工业的;
 inequality ,/n./@不平等;
 inevitable ,/adj./@必然的;,/adj./@不可避免的;
+infarction ,/n./@梗塞;
 infiltrate ,/v./@渗入;,/v./@潜入;
 ingredient ,/n./@成分;
 inhabitant ,/n./@居民;
@@ -390,6 +391,7 @@ motivation ,/n./@动力;
 multiplier ,/n./@乘數;,/n./@倍增器;
 munificent ,/adj./@慷慨的;,/adj./@豐厚的;,/adj./@寬宏的;
 mutability ,/n./@易變性;
+myocardial ,/adj./@心肌的;
 mysterious ,/adj./@神秘的;
 navigation ,/n./@航行;,/n./@航海;
 neutralize ,/v./@中和;,/v./@抵消;
