--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -189,6 +189,7 @@ carry ,/v./@搬運;,/v./@攜帶;
 catch ,/v./@抓;,/v./@獲;
 cater ,/v./@迎合;,/v./@投合;
 cause ,/v./@導致;
+cavil ,/vi./@挑剔;,/vi./@吹毛求疵;
 cease ,/v./@停止;
 chain ,/n./@鎖鏈;
 chair ,/n./@椅子;
@@ -211,8 +212,8 @@ chili ,/n./@辣椒;,/n./@紅辣椒;
 chill ,/v./@變冷;,/v./@冷卻;
 chime ,/v./@鳴響;,/n./@鐘聲;,/n./@和諧;
 chimp ,/n./@黑猩猩;
-china ,/n./@陶瓷;
 China ,/n./@中國;
+china ,/n./@陶瓷;
 chirp ,/n./@吱喳聲;
 chive ,/n./@香蔥;
 choke ,/v./@噎;
@@ -223,7 +224,7 @@ cigar ,/n./@雪茄;
 cinch ,/v./@緊握;
 claim ,/v./@聲稱;
 clash ,/n./@衝突;,/n./@碰撞;
-clasp ,/v./@緊抱;,/n./@釦子;
+clasp ,/v./@緊抱;,/n./@釦子;,/vt./@紧握;
 class ,/n./@課;
 clean ,/adj./@干凈的;
 clear ,/v./@清理;
@@ -277,7 +278,7 @@ cress ,/n./@水芹;
 crime ,/n./@罪;
 crimp ,/n./@捲曲;,/n./@褶皺;
 crisp ,/adj./@鬆脆的;
-croak ,/v./@呱呱叫;
+croak ,/v./@呱呱叫;,/vi./@咽气;
 crook ,/n./@骗子;,/n./@弯曲;,/n./@弯处;,/n./@坏蛋;
 cross ,/v./@穿越;
 crowd ,/n./@人羣;
@@ -498,7 +499,7 @@ grain ,/n./@穀物;,/n./@糧食;,/n./@顆粒;,/n./@穀粒;
 grand ,/adj./@宏偉的;,/adj./@極好的;,/adj./@重大的;
 grant ,/v./@授予;
 graph ,/n./@圖表;,/n./@曲綫圖;
-grasp ,/v./@抓緊;
+grasp ,/v./@抓緊;,/n./@掌握;,/n./@控制;,/n./@理解;,/vt./@抓住;,/vt./@理解;
 grass ,/n./@草;
 grave ,/n./@墳墓;
 graze ,/v./@吃草;,/v./@放牧;,/v./@刮擦;
@@ -645,8 +646,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-March ,/n./@三月;
 march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
+March ,/n./@三月;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
