--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -487,6 +487,7 @@ filter ,/n./@濾器;,/n./@濾鏡;,/v./@過濾;
 filthy ,/adj./@肮脏的;
 finish ,/v./@完成;
 finite ,/adj./@有限的;
+fiscal ,/adj./@财政的;
 fixate ,/v./@註視;,/v./@固定;
 fizzle ,/n./@失敗;,/v./@萎靡;
 flabby ,/adj./@鬆弛的;,/adj./@軟弱的;
@@ -567,7 +568,7 @@ ground ,/n./@場地;,/n./@地面;,/n./@理由;,/n./@根據;
 growth ,/n./@增長;,/n./@發展;,/n./@生長;
 grumpy ,/adj./@脾氣暴躁的;
 guffaw ,/v./@哄笑;
-guilty ,/adj./@有罪的;
+guilty ,/adj./@有罪的;,/adj./@內疚的;
 guitar ,/n./@吉他;
 gurgle ,/n./@咯咯聲;
 haggle ,/n./@爭論;,/n./@討價還價;
@@ -678,6 +679,7 @@ kitten ,/n./@小貓;
 knight ,/n./@騎士;
 lackey ,/n./@男僕;,/n./@侍從;,/n./@馬屁精;
 ladder ,/n./@梯子;
+lapdog ,/n./@走狗;
 laptop ,/n./@筆記本;
 larynx ,/n./@喉;
 lately ,/adj./@近來;
@@ -796,6 +798,7 @@ mutant ,/n./@突變體;,/adj./@突變的;
 mutate ,/v./@變化;,/v./@改變;,/v./@突變;
 mutter ,/v./@咕噥;
 mutual ,/adj./@相互的;
+myopia ,/n./@近視;,/n./@目光短淺;
 myself ,/pron./@我自己;
 mystic ,/adj./@神秘的;
 napkin ,/n./@餐巾;,/n./@餐巾紙;
