--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -165,6 +165,7 @@ butcher ,/n./@屠夫;
 buttock ,/n./@半邊臀部;
 cabbage ,/n./@捲心菜;,/n./@圓白菜;
 cabinet ,/n./@內閣;,/n./@壁櫥;
+canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
 capital ,/n./@首都;,/n./@資本;
@@ -199,8 +200,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-Chinese ,/n./@漢語;
 chinese ,/n./@漢語;
+Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -914,6 +915,7 @@ pyramid ,/n./@金字塔;
 qualify ,/v./@限制;,/v./@合格;,/v./@授權;
 quality ,/n./@質量;
 quantum ,/n./@量子;
+quibble ,/vi./@吹毛求疵;,/vi./@挑刺;,/vi./@抱怨;,/n./@牢骚;
 quicken ,/v./@加快;
 quickly ,/adv./@快速地;,/adv./@快;
 radiant ,/adj./@發光的;
@@ -1017,6 +1019,7 @@ session ,/n./@會議;
 several ,/adj./@幾個;,/adj./@數個;
 shallow ,/adj./@淺的;
 shamble ,/v./@蹣跚;,/v./@搖晃地走;
+sharpen ,/vt./@削尖;,/vt./@磨快;
 shelter ,/v./@庇護;
 sheriff ,/n./@郡長;,/n./@警長;,/n./@州長;
 shimmer ,/v./@閃爍;,/n./@閃光;,/n./@微光;
@@ -1195,8 +1198,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
