--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -287,7 +287,7 @@ dystopian ,/adj./@反面烏托邦的;
 earnestly ,/adv./@认真地;
 eccentric ,/adj./@古怪的;
 economist ,/n./@经济学家;
-editorial ,/n./@社論;
+editorial ,/n./@社論;,/adj./@编辑的;
 education ,/n./@教育;
 effective ,/adj./@有效的;
 efficient ,/adj./@效率高的;
