--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -325,6 +325,7 @@ inducement
 industrial
 inequality
 inevitable
+infarction
 infiltrate
 ingredient
 inhabitant
@@ -390,6 +391,7 @@ motivation
 multiplier
 munificent
 mutability
+myocardial
 mysterious
 navigation
 neutralize
