--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -189,6 +189,7 @@ carry
 catch
 cater
 cause
+cavil
 cease
 chain
 chair
@@ -211,8 +212,8 @@ chili
 chill
 chime
 chimp
-china
 China
+china
 chirp
 chive
 choke
@@ -645,8 +646,8 @@ magic
 major
 mango
 mania
-March
 march
+March
 match
 maths
 maxim
