--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -487,6 +487,7 @@ filter
 filthy
 finish
 finite
+fiscal
 fixate
 fizzle
 flabby
@@ -678,6 +679,7 @@ kitten
 knight
 lackey
 ladder
+lapdog
 laptop
 larynx
 lately
@@ -796,6 +798,7 @@ mutant
 mutate
 mutter
 mutual
+myopia
 myself
 mystic
 napkin
