--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -165,6 +165,7 @@ butcher
 buttock
 cabbage
 cabinet
+canvass
 capable
 capella
 capital
@@ -199,8 +200,8 @@ charter
 cherish
 chicken
 chimney
-Chinese
 chinese
+Chinese
 chowder
 chronic
 chuckle
@@ -914,6 +915,7 @@ pyramid
 qualify
 quality
 quantum
+quibble
 quicken
 quickly
 radiant
@@ -1017,6 +1019,7 @@ session
 several
 shallow
 shamble
+sharpen
 shelter
 sheriff
 shimmer
@@ -1195,8 +1198,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
