--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -571,7 +571,7 @@ guffaw ,/v./@哄笑;
 guilty ,/adj./@有罪的;,/adj./@內疚的;
 guitar ,/n./@吉他;
 gurgle ,/n./@咯咯聲;
-haggle ,/n./@爭論;,/n./@討價還價;
+haggle ,/n./@爭論;,/n./@討價還價;,/vi./@爭論;,/vi./@討價還價;
 hallow ,/n./@神聖;,/v./@神化;,/n./@聖徒;,/n./@聖器;
 hamlet ,/n./@小村莊;
 hammer ,/n./@錘子;,/v./@錘擊;
