--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -326,7 +326,7 @@ esoterica ,/n./@秘传的事物;,/n./@黄色书刊;
 espionage ,/n./@間諜;,/n./@間諜活動;
 essential ,/adj./@重要的;
 establish ,/v./@建立;,/v./@确立;
-etiquette ,/n./@禮節;
+etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
 evaporate ,/v./@蒸發;,/v./@脫水;,/v./@消失;
 evolution ,/n./@進化;,/n./@發展;
 Excalibur ,/n./@神劍;,/n./@聖劍;
