--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -313,7 +313,7 @@ top ,/n./@頂;,/n./@端;
 toy ,/n./@玩具;
 try ,/v./@嘗試;
 tub ,/n./@浴盆;,/n./@桶;
-tug ,/v./@拉;
+tug ,/v./@拉;,/vt./@拽;
 tut ,/v./@嘖;
 two ,/adj./@二;
 unt ,/n./@阿姨;
