--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -35,7 +35,7 @@ back ,/adv./@回;,/n./@后面;,/n./@背部;,/adv./@向后地;,/v./@支持;
 bail ,/n.//vt./@保釋;
 bait ,/n./@誘餌;,/v./@引誘;
 bake ,/v./@烘焙;
-bald ,/adj./@秃的;,/adj./@光秃的;,/adj./@单调的;
+bald ,/adj./@秃的;,/adj./@光秃的;,/adj./@单调的;,/adj./@磨光的;
 bale ,/n./@包;,/n./@捆;,/n./@災禍;
 balk ,/n./@障礙;,/n./@錯誤;
 ball ,/n./@球;
