--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -691,6 +691,7 @@ mouth ,/n./@口;
 moved ,/adj./@感動的;,/adj./@被移動的;
 movie ,/n./@電影;
 mulch ,/n./@護根;,/n./@護蓋物;
+mural ,/n./@壁画;
 music ,/n./@音樂;
 musty ,/adj./@發霉的;,/adj./@落伍的;,/adj./@冷淡的;
 mutex ,/n./@互斥;,/n./@互斥體;
@@ -1037,6 +1038,7 @@ spree ,/n./@狂歡;
 spurn ,/v./@唾棄;,/v./@摒棄;
 spurt ,/v./@冲刺;,/v./@喷出;,/v./@迸发;
 squat ,/v./@蹲;
+squid ,/n./@鱿鱼;
 stack ,/n./@堆;
 staff ,/n./@員工;
 stage ,/n./@舞臺;,/n./@階段;
