--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -178,7 +178,7 @@ buffer ,/n./@緩衝區;
 buffet ,/n./@自助餐;
 bullet ,/n./@子彈;
 bundle ,/n./@捆;
-bunker ,/n./@掩體;
+bunker ,/n./@掩體;,/n./@地堡;,/n./@沙坑;
 burden ,/n./@重負;
 bureau ,/n./@局;,/n./@司;,/n./@辦公室;
 burial ,/n./@葬禮;
@@ -191,8 +191,8 @@ camera ,/n./@照相機;
 campus ,/n./@校園;
 Canada ,/n./@加拿大;
 cancel ,/v./@取消;
-cancer ,/n./@癌症;
 Cancer ,/n./@巨蟹座;
+cancer ,/n./@癌症;
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -1144,6 +1144,7 @@ sleepy ,/adj./@欲睡的;,/adj./@困乏的;
 sleeve ,/n./@袖子;
 slight ,/adj./@稍微的;
 slogan ,/n./@標語;
+slouch ,/vi./@低头垂肩地坐着;,/vi./@无精打采地站着;
 smooch ,/v./@接吻;,/v./@弄髒;
 smooth ,/adj./@光滑的;,/adj./@順利的;
 smudge ,/v./@弄髒;
