--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -832,7 +832,7 @@ roommate ,/n./@室友;
 rotation ,/n./@旋转;
 rudiment ,/n./@雛形;,/n./@基本原理;
 ruminant ,/adj./@反芻的;,/adj./@沉思的;
-ruminate ,/v./@沉思;,/v./@反芻;
+ruminate ,/v./@沉思;,/v./@反芻;,/vi./@反复思考;
 ruthless ,/adj./@冷酷的;
 sabotage ,/n./@破坏;,/n./@妨碍;
 sadistic ,/adj./@虐待狂的;
@@ -896,6 +896,7 @@ spacious ,/adj./@宽敞的;
 specific ,/adj./@特殊的;,/adj./@明确的;
 spectrum ,/n./@光谱;,/n./@频谱;,/n./@范围;,/n./@余象;
 spiteful ,/adj./@懷恨的;,/adj./@惡意的;
+splatter ,/vt./@泼溅;,/vi./@啪嗒作响;,/n./@啪嗒声;
 splendid ,/adj./@壮丽的;
 splendor ,/n./@光彩;,/n./@壯麗;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;
