--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -412,6 +412,7 @@ histogram ,/n./@直方图;,/n./@柱形图;
 homefront ,/n./@國土防線;
 homegrown ,/adj./@本土的;,/adj./@國產的;,/adj./@自家種植的;
 homemaker ,/n./@主妇;
+honeycomb ,/n./@蜂巢;
 hostility ,/n./@敵意;,/n./@敵對;
 humiliate ,/v./@羞辱;
 hurricane ,/n./@颶風;
@@ -507,6 +508,7 @@ machinery ,/n./@机械;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 malicious ,/adj./@惡意的;
 manifesto ,/n./@宣言;
+mannequin ,/n./@人体模型;
 margarine ,/n./@人造黃油;,/n./@人造奶油;
 marijuana ,/n./@大麻;
 marvelous ,/adj./@了不起的;,/adj./@非凡的;,/adj./@令人惊异的;,/adj./@不平常的;
