--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -691,6 +691,7 @@ mouth
 moved
 movie
 mulch
+mural
 music
 musty
 mutex
@@ -1037,6 +1038,7 @@ spree
 spurn
 spurt
 squat
+squid
 stack
 staff
 stage
