--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -191,8 +191,8 @@ camera
 campus
 Canada
 cancel
-cancer
 Cancer
+cancer
 candid
 cannon
 cannot
@@ -1144,6 +1144,7 @@ sleepy
 sleeve
 slight
 slogan
+slouch
 smooch
 smooth
 smudge
