--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -412,6 +412,7 @@ histogram
 homefront
 homegrown
 homemaker
+honeycomb
 hostility
 humiliate
 hurricane
@@ -507,6 +508,7 @@ machinery
 magnitude
 malicious
 manifesto
+mannequin
 margarine
 marijuana
 marvelous
