--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -828,6 +828,7 @@ persist ,/v./@堅持;,/v./@固執;
 pertain ,/vi./@屬於;,/vi./@關於;,/vi./@適合;
 perturb ,/vt./@煩擾;
 pervert ,/v./@濫用;,/n./@變態;,/v./@腐蝕;,/v./@歪曲;
+petrify ,/vt./@吓呆;,/vt./@石化;,/vi./@石化;
 phantom ,/n./@幽靈;,/n./@幻影;
 phoenix ,/n./@鳳凰;
 physics ,/n./@物理學;
@@ -841,6 +842,7 @@ placate ,/v./@撫慰;,/v./@懷柔;,/v./@和解;
 placebo ,/n./@安慰剂;,/n./@晚祷词;
 plateau ,/n./@髙原;,/n./@髙地;
 plumber ,/n./@管道工;
+plummet ,/vi./@坠落;,/vi./@跌落;
 plunder ,/v./@掠奪;,/v./@搶劫;
 podcast ,/n./@播客;
 pointer ,/n./@指針;
@@ -1020,6 +1022,7 @@ several ,/adj./@幾個;,/adj./@數個;
 shallow ,/adj./@淺的;
 shamble ,/v./@蹣跚;,/v./@搖晃地走;
 sharpen ,/vt./@削尖;,/vt./@磨快;
+shatter ,/vt./@打碎;,/vt./@破坏;,/vi./@碎裂;
 shelter ,/v./@庇護;
 sheriff ,/n./@郡長;,/n./@警長;,/n./@州長;
 shimmer ,/v./@閃爍;,/n./@閃光;,/n./@微光;
@@ -1191,6 +1194,7 @@ utilize ,/v./@使用;
 utopian ,/adj./@烏托邦的;,/adj./@空想的;
 vacancy ,/n./@空缺;,/n./@空位;,/n./@空白;,/n./@空虛;
 vaccine ,/n./@疫苗;
+vaginal ,/adj./@阴道的;
 vagrant ,/adj./@流浪的;,/adj./@漂泊的;
 valiant ,/adj./@英勇的;
 vamoose ,/v./@匆匆離開;
