--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -828,6 +828,7 @@ persist
 pertain
 perturb
 pervert
+petrify
 phantom
 phoenix
 physics
@@ -841,6 +842,7 @@ placate
 placebo
 plateau
 plumber
+plummet
 plunder
 podcast
 pointer
@@ -1020,6 +1022,7 @@ several
 shallow
 shamble
 sharpen
+shatter
 shelter
 sheriff
 shimmer
@@ -1191,6 +1194,7 @@ utilize
 utopian
 vacancy
 vaccine
+vaginal
 vagrant
 valiant
 vamoose
